Update primary color to ensure the contrast ratio exceeds Web Content Accessibility Guidelines

--- a/src/styles/imports/variables.css
+++ b/src/styles/imports/variables.css
@@ -1,6 +1,6 @@
 :root {
     /* Colorbook */
-    --color-primary: #ef3a24;
+    --color-primary: #de3521;
     --color-heading: #282828;
     --color-sub-heading: #a0a0a0;
     --color-main: #6e6e6f;
